--- a/src/app/templates/header/header.component.scss
+++ b/src/app/templates/header/header.component.scss
@@ -100,7 +100,9 @@ a {
     p {
       display: block;
 
-      padding-left: 18px;
+      padding-left: 16px;
+      padding-top: 10px;
+      padding-bottom: 10px;
       border-bottom: 1px solid rgb(177, 177, 177);
     }
   }
