--- a/src/app/module/my-uploads/my-uploads.component.html
+++ b/src/app/module/my-uploads/my-uploads.component.html
@@ -4,31 +4,25 @@
         <h2 translate>My Uploads</h2>
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-            <!--- Note that these columns can be defined in any order.
-                  The actual rendered columns are set as a property on the row definition" -->
-
-            <!-- Position Column -->
             <ng-container matColumnDef="movie_name">
-                <th mat-header-cell *matHeaderCellDef translate> Name </th>
+                <th mat-header-cell *matHeaderCellDef translate class="dn-small"> Name </th>
                 <td mat-cell *matCellDef="let element"> {{element.movie_name}} </td>
             </ng-container>
 
-            <!-- Name Column -->
             <ng-container matColumnDef="created_at">
-                <th mat-header-cell *matHeaderCellDef translate> Created at</th>
-                <td mat-cell *matCellDef="let element"> {{element.created_at}} </td>
+                <th class="dn-small" mat-header-cell *matHeaderCellDef translate> Created at</th>
+                <td class="dn-small" mat-cell *matCellDef="let element"> {{element.created_at}} </td>
             </ng-container>
 
-            <!-- Weight Column -->
             <ng-container matColumnDef="genre">
-                <th mat-header-cell *matHeaderCellDef translate> Genre </th>
-                <td mat-cell *matCellDef="let element"> {{element.genre}} </td>
+                <th mat-header-cell *matHeaderCellDef translate class="dn-small"> Genre </th>
+                <td class="dn-small" mat-cell *matCellDef="let element"> {{element.genre}} </td>
             </ng-container>
 
             <ng-container matColumnDef="cover">
-                <th mat-header-cell *matHeaderCellDef translate> Cover </th>
-                <td mat-cell *matCellDef="let element"><a href="/single-view?select={{element.random_key}}"> <img
-                            [src]="element.cover" /></a> </td>
+                <th mat-header-cell *matHeaderCellDef translate class="dn-small"> Cover </th>
+                <td class="dn-small" mat-cell *matCellDef="let element"><a
+                        href="/single-view?select={{element.random_key}}"> <img [src]="element.cover" /></a> </td>
             </ng-container>
 
             <ng-container matColumnDef="change">
@@ -49,7 +43,7 @@
                 </td>
             </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns" class="dn-small"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
     </div>
