--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -60,9 +60,7 @@
                     <i><a href="/privacy-policy" translate>Privacy policy</a></i> <span translate> as described above.
                         By
                         clicking on "Continue", confirm that you accept our </span><i><a href="/privacy-policy"
-                            translate>Privacy policy</a></i> <span translate> and </span> <i><a href="/cookie-policy"
-                            translate>Cookie Policy</a></i>
-                    <span translate> have read.</span>
+                            translate>Privacy policy</a></i> <span translate> have read.</span>
                 </span>
                 <button class="next-button" mat-fab extended color="primary">
                     <p translate>Next</p>
