--- a/src/app/templates/header/dialog/konto-account.html
+++ b/src/app/templates/header/dialog/konto-account.html
@@ -50,10 +50,11 @@
                 </button>
             </form>
         </div>
+        <div mat-dialog-actions align="center">
+            <button mat-raised-button cdkFocusInitial color="primary" mat-dialog-close>
+                <p translate>Close</p>
+            </button>
+        </div>
     </div>
-    <div mat-dialog-actions align="center">
-        <button class="buton-bottom" mat-raised-button cdkFocusInitial color="primary" mat-dialog-close>
-            <p translate>Close</p>
-        </button>
-    </div>
+
 </div>
