--- a/src/app/templates/header/dialog/delete-account.html
+++ b/src/app/templates/header/dialog/delete-account.html
@@ -1,4 +1,4 @@
-<div class="delete-account">
+<div style="padding: 20px;">
   <h2 mat-dialog-title translate>
     Delete account</h2>
   <div mat-dialog-content>
@@ -8,7 +8,7 @@
     <button mat-button mat-dialog-close>
       <p translate>Cancel</p>
     </button>
-    <button [disabled]="guest" mat-button (click)="deleteAccount()" mat-dialog-close>
+    <button color="warn" [disabled]="guest" mat-flat-button (click)="deleteAccount()" mat-dialog-close>
       <p translate>Delete</p>
     </button>
   </div>
