--- a/src/app/account/landing-reset-password/landing-reset-password.component.html
+++ b/src/app/account/landing-reset-password/landing-reset-password.component.html
@@ -9,24 +9,32 @@
             <form class="register-form" (ngSubmit)="submitForm()">
                 <mat-form-field>
                     <mat-label>
-                        <p translate>Enter your password</p>
+                        <span translate>Enter your password</span>
                     </mat-label>
                     <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="password1">
                     @if (password1.invalid) {<mat-error>{{getErrorMessagepassword1()}}</mat-error>}
                     @if (password1.valid) { <mat-icon matSuffix>check</mat-icon>}
                     <mat-hint>{{password_incorrect}}</mat-hint>
+                    <button mat-icon-button matSuffix type="button" (click)="hide = !hide"
+                        [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                        <mat-icon style="color: white;">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </button>
                 </mat-form-field>
                 <mat-form-field>
                     <mat-label>
-                        <p translate>Enter your password again</p>
+                        <span translate>Enter your password again</span>
                     </mat-label>
-                    <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="password2">
+                    <input matInput [type]="hide2 ? 'password' : 'text'" [formControl]="password2" required>
                     @if (password2.invalid) {<mat-error>{{getErrorMessagepassword2()}}</mat-error>}
                     @if (password2.valid) { <mat-icon matSuffix>check</mat-icon>}
                     <mat-hint>{{password_incorrect}}</mat-hint>
+                    <button mat-icon-button matSuffix type="button" (click)="hide2 = !hide2"
+                        [attr.aria-label]="'Hide2 password'" [attr.aria-pressed]="hide2">
+                        <mat-icon style="color: white;">{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </button>
                 </mat-form-field>
-                <p translate>Use at least eight characters (case sensitive) with at least one number and one special
-                    character. one special character.</p>
+                <i translate>Use at least eight characters (case sensitive) with at least one number and one special
+                    character. one special character.</i>
                 <button class="next-button" mat-fab extended color="primary">
                     <p translate>Save</p>
                 </button>
