--- a/src/app/content/single-view/convert.dialog.html
+++ b/src/app/content/single-view/convert.dialog.html
@@ -3,5 +3,7 @@
         be
         patient and check back later</span></mat-dialog-content>
 <mat-dialog-actions>
-    <button mat-button mat-dialog-close>Close</button>
+    <button mat-button mat-dialog-close>
+        <p translate>Close</p>
+    </button>
 </mat-dialog-actions>
