--- a/src/app/templates/header/dialog/profil-account.html
+++ b/src/app/templates/header/dialog/profil-account.html
@@ -41,7 +41,7 @@
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
-                <h3 class="profil-h3">Age rating</h3>
+                <h3 class="profil-h3" translate>Age rating</h3>
                 <mat-chip-listbox aria-label="Fish selection">
                     <mat-chip-option [selected]="selectedAge === 0" (selectionChange)="changeSelected(0)">
                         <p translate>None Age rating</p>
