--- a/src/app/account/landing-reset-password/landing-reset-password.component.scss
+++ b/src/app/account/landing-reset-password/landing-reset-password.component.scss
@@ -12,6 +12,9 @@
   @media (max-width: 600px), (max-height: 600px) {
     padding: 10px;
   }
+  i {
+    color: white;
+  }
 }
 
 .register-card {
@@ -85,4 +88,8 @@ mat-hint {
 
 .mat-mdc-floating-label {
   display: flex !important;
+}
+
+.form-input {
+  display: block;
 }
