--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -42,19 +42,29 @@
                     @if (password1.invalid) {<mat-error>{{getErrorMessagepassword1()}}</mat-error>}
                     @if (password1.valid) { <mat-icon matSuffix>check</mat-icon>}
                     <mat-hint>{{password_incorrect}}</mat-hint>
+                    <button mat-icon-button matSuffix type="button" (click)="hide = !hide"
+                        [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                        <mat-icon style="color: white;">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </button>
+
                 </mat-form-field>
                 <mat-form-field>
                     <mat-label>
                         <span translate>Enter your password again</span>
                     </mat-label>
-                    <input matInput [type]="hide ? 'password' : 'text'" required [formControl]="password2">
+                    <input matInput [type]="hide2 ? 'password' : 'text'" required [formControl]="password2">
                     @if (password2.invalid) {<mat-error>{{getErrorMessagepassword2()}}</mat-error>}
                     @if (password2.valid) { <mat-icon matSuffix>check</mat-icon>}
                     <mat-hint>{{password_incorrect}}</mat-hint>
+                    <button mat-icon-button matSuffix type="button" (click)="hide2 = !hide2"
+                        [attr.aria-label]="'Hide2 password2'" [attr.aria-pressed]="hide2">
+                        <mat-icon style="color: white;">{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    </button>
                 </mat-form-field>
-                <p translate>Use at least eight characters (case sensitive) with at least one number and one special
-                    character. one special character.</p>
-                <span> <span translate>Videoflix uses your data to personalise and customise your Videoflix experience.
+                <i translate>Use at least eight characters (case sensitive) with at least one number and one special
+                    character. one special character.</i>
+                <span class="privacy-policy-box"> <span translate>Videoflix uses your data to personalise and customise
+                        your Videoflix experience.
                         to improve it. You can change your change your communication settings at any time. We may use
                         your data as described in our </span>
                     <i><a href="/privacy-policy" translate>Privacy policy</a></i> <span translate> as described above.
@@ -62,7 +72,7 @@
                         clicking on "Continue", confirm that you accept our </span><i><a href="/privacy-policy"
                             translate>Privacy policy</a></i> <span translate> have read.</span>
                 </span>
-                <button class="next-button" mat-fab extended color="primary">
+                <button [disabled]="send_mail" class="next-button" mat-fab extended color="primary">
                     <p translate>Next</p>
                 </button>
             </form>
