--- a/src/app/account/register/register.component.scss
+++ b/src/app/account/register/register.component.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  i {
+    color: white;
+  }
 }
 
 .register {
@@ -84,4 +87,8 @@ mat-hint {
 
 .mat-icon {
   color: rgb(0, 207, 0);
+}
+
+.privacy-policy-box {
+  margin-top: 25px;
 }
