--- a/src/app/content/serch/serch.component.html
+++ b/src/app/content/serch/serch.component.html
@@ -3,10 +3,9 @@
     <form class="example-form">
         <mat-form-field class="example-full-width">
             <mat-label>
-                <p translate>Search movie</p>
+                <span translate>Search movie</span>
             </mat-label>
-            <input matInput placeholder="Title, Charakter oder Genre suchen" [(ngModel)]="key" name="search"
-                (input)="filterData()">
+            <input matInput [(ngModel)]="key" name="search" (input)="filterData()">
         </mat-form-field>
     </form>
     <div *ngIf="filteredData.length > 0; else noResults" class="content">
@@ -27,7 +26,7 @@
             </div>
         </div>
     </div>
-    <h2 *ngIf="key.length == 0" class="noFound" translate>Please enter a search term.</h2>
+    <h2 *ngIf="key.length == 0" class="noFound" translate>Please enter the desired title above.</h2>
     <ng-template #noResults>
         <h2 *ngIf="key.length >= 1" class="noFound" translate>Nothing found.</h2>
     </ng-template>
