--- a/src/app/landing/hero/hero.component.scss
+++ b/src/app/landing/hero/hero.component.scss
@@ -17,9 +17,10 @@
 }
 
 .landing-login {
-  position: absolute;
+  position: fixed;
   top: 20px;
   right: 30px;
+  z-index: 500;
   @media (max-width: 600px), (max-height: 600px) {
     display: none;
   }
@@ -28,7 +29,7 @@
 .landing-login-smart {
   display: none;
   @media (max-width: 600px), (max-height: 600px) {
-    display: block;
+    display: flex;
   }
 }
 
