--- a/src/app/policy/imprint/imprint.component.html
+++ b/src/app/policy/imprint/imprint.component.html
@@ -1,8 +1,10 @@
 <button (click)="goBack()" mat-fab extended color="">
     <p translate>back</p>
 </button>
-<div class='impressum'>
+<div *ngIf="translate.store.currentLang == 'de'" class='impressum'>
     <h1>Impressum</h1>
+    <br>
+    <br>
     <p>Angaben gemäß § 5 TMG</p>
     <p>Tony Tech <br>
         Eschenweg 6<br>
@@ -42,5 +44,50 @@
     Website Impressum erstellt durch <a href="https://www.impressum-generator.de">impressum-generator.de</a> von der <a
         href="https://www.kanzlei-hasselbach.de/" rel="nofollow">Kanzlei Hasselbach</a>
 </div>
+<div *ngIf="translate.store.currentLang == 'en'" class='impressum'>
+    <h1>Imprint</h1>
+    <br><br>
+    <p>Information according to § 5 TMG</p>
+    <p>Tony Tech <br>
+        Eschenweg 6<br>
+        78604 Rietheim-Weilheim <br>
+    </p>
+    <p> <strong>Represented by: </strong><br>
+        Tony Tech<br>
+    </p>
+    <p><strong>Contact:</strong> <br>
+        Phone: 0-0<br>
+        E-Mail: <br><a href='mailto:info@tech-mail.eu'>info'at'tech-mail.eu</a></p>
+    <p><strong>Disclaimer: </strong><br><br><strong>Liability for content</strong><br><br>
+        The contents of our pages were created with the utmost care. However, we cannot guarantee the accuracy,
+        completeness, and timeliness of the content. As a service provider, we are responsible for our own content on
+        these pages according to general laws, as per § 7 para.1 TMG. According to §§ 8 to 10 TMG, we are not obligated
+        as a service provider to monitor transmitted or stored third-party information or to investigate circumstances
+        that indicate illegal activity. Obligations to remove or block the use of information under general laws remain
+        unaffected. However, liability in this regard is only possible from the time of knowledge of a specific
+        infringement. Upon becoming aware of such legal violations, we will remove this content
+        immediately.<br><br><strong>Liability for links</strong><br><br>
+        Our offer contains links to external websites of third parties, on whose contents we have no influence.
+        Therefore, we cannot assume any liability for these external contents. The respective provider or operator of
+        the
+        pages is always responsible for the contents of the linked pages. The linked pages were checked for possible
+        legal violations at the time of linking. Illegal contents were not recognizable at the time of linking. However,
+        a permanent control of the content of the linked pages is not reasonable without concrete evidence of a
+        violation
+        of the law. Upon becoming aware of legal violations, we will remove such links
+        immediately.<br><br><strong>Copyright</strong><br><br>
+        The contents and works created by the site operators on these pages are subject to German copyright law. The
+        reproduction, editing, distribution, and any kind of exploitation outside the limits of copyright require the
+        written consent of the respective author or creator. Downloads and copies of this site are only permitted for
+        private, non-commercial use. Insofar as the content on this site was not created by the operator, the copyright
+        of third parties is respected. In particular, third-party content is identified as such. Should you nevertheless
+        become aware of a copyright infringement, please inform us accordingly. Upon becoming aware of legal violations,
+        we will remove such content immediately.</p><br>
+    Website imprint created by <a href="https://www.impressum-generator.de">impressum-generator.de</a> by <a
+        href="https://www.kanzlei-hasselbach.de/" rel="nofollow">Kanzlei Hasselbach</a>
+
+</div>
+
+
 
 <app-footer></app-footer>
