--- a/src/app/policy/privacy-policy/privacy-policy.component.html
+++ b/src/app/policy/privacy-policy/privacy-policy.component.html
@@ -1,7 +1,7 @@
 <button (click)="goBack()" mat-fab extended color="">
     <p translate>back</p>
 </button>
-<div class="content">
+<div *ngIf="translate.store.currentLang == 'de'" class="content">
     <h1>Datenschutz&shy;erkl&auml;rung</h1>
     <h2>1. Datenschutz auf einen Blick</h2>
     <h3>Allgemeine Hinweise</h3>
@@ -282,5 +282,206 @@
         weiterhin bei den jeweiligen Fotografen oder Künstlern liegen. Sollten Sie Grund zur Annahme haben, dass Ihre
         Urheberrechte verletzt wurden, kontaktieren Sie uns bitte umgehend, damit wir entsprechende Maßnahmen ergreifen
         können.</p>
+</div>
+<div *ngIf="translate.store.currentLang == 'en'" class="content">
+    <h1>Privacy Policy</h1>
+    <h2>1. Data Protection at a Glance</h2>
+    <h3>General Information</h3>
+    <p>The following information provides a simple overview of what happens to your personal data when you visit this
+        website. Personal data is any data that can personally identify you. Detailed information on data protection can
+        be found in our privacy policy listed below this text.</p>
+    <h3>Data Collection on this Website</h3>
+    <h4>Who is responsible for data collection on this website?</h4>
+    <p>Data processing on this website is carried out by the website operator. You can find the contact details of the
+        website operator in the "Information about the Responsible Party" section of this privacy policy.</p>
+    <h4>How do we collect your data?</h4>
+    <p>Your data is collected when you provide it to us. This can, for example, be data you enter into a contact form.
+        Other data is automatically collected by our IT systems when you visit the website. These are mainly technical
+        data (e.g., internet browser, operating system, or time of page visit). This data is collected automatically as
+        soon as you enter this website.</p>
+    <h4>What do we use your data for?</h4>
+    <p>Some of the data is collected to ensure the proper functioning of the website. Other data may be used to analyze
+        your user behavior.</p>
+    <h4>What rights do you have regarding your data?</h4>
+    <p>You have the right to receive information about the origin, recipient, and purpose of your stored personal data
+        free of charge at any time. You also have the right to request the correction or deletion of this data. If you
+        have given your consent to data processing, you can revoke this consent at any time for the future. You also
+        have the right to request the restriction of the processing of your personal data under certain circumstances.
+        Furthermore, you have the right to lodge a complaint with the competent supervisory authority.</p>
+    <p>For these and other questions regarding data protection, you can contact us at any time.</p>
+    <h2>2. Hosting</h2>
+    <p>We host the content of our website with the following provider:</p>
+    <h3>IONOS</h3>
+    <p>The provider is IONOS SE, Elgendorfer Str. 57, 56410 Montabaur (hereinafter IONOS). When you visit our website,
+        IONOS collects various log files, including your IP addresses. Details can be found in the IONOS privacy policy:
+        <a href="https://www.ionos.de/terms-gtc/terms-privacy" target="_blank"
+            rel="noopener noreferrer">https://www.ionos.de/terms-gtc/terms-privacy</a>.
+    </p>
+    <p>The use of IONOS is based on Art. 6(1)(f) GDPR. We have a legitimate interest in presenting our website as
+        reliably as possible. If consent has been requested, the processing is carried out exclusively on the basis of
+        Art. 6(1)(a) GDPR and § 25(1) TTDSG, insofar as the consent includes the storage of cookies or access to
+        information on the user's device (e.g., device fingerprinting) within the meaning of TTDSG. The consent can be
+        revoked at any time.</p>
+
+    <h2>3. General Information and Mandatory Information</h2>
+    <h3>Data Protection</h3>
+    <p>The operators of these pages take the protection of your personal data very seriously. We treat your personal
+        data confidentially and in accordance with the statutory data protection regulations and this privacy policy.
+    </p>
+    <p>When you use this website, various personal data is collected. Personal data is data with which you can be
+        personally identified. This privacy policy explains what data we collect and what we use it for. It also
+        explains how and for what purpose this happens.</p>
+    <p>We would like to point out that data transmission over the Internet (e.g., when communicating by e-mail) may have
+        security vulnerabilities. A complete protection of data against access by third parties is not possible.</p>
+    <h3>Information about the Responsible Party</h3>
+    <p>The responsible party for data processing on this website is:</p>
+    <p>Tony Tech<br />
+        Eschenweg 6<br />
+        78604 Rietheim-Weilheim</p>
+    <p>Phone: [Phone number of the responsible party]<br />
+        Email: info'at'tech-mail.eu</p>
+    <p>The responsible party is the natural or legal person who alone or jointly with others decides on the purposes and
+        means of processing personal data (e.g., names, e-mail addresses, etc.).</p>
+    <h3>Storage Period</h3>
+    <p>Unless a specific storage period is specified within this privacy policy, your personal data will remain with us
+        until the purpose for processing the data no longer applies. If you make a legitimate request for deletion or
+        revoke your consent to data processing, your data will be deleted, provided we have no other legally permissible
+        reasons for storing your personal data (e.g., tax or commercial retention periods); in the latter case, the
+        deletion will take place after these reasons cease to apply.</p>
+    <h3>General Notes on the Legal Basis for Data Processing on this Website</h3>
+    <p>If you have given your consent to data processing, we process your personal data on the basis of Art. 6(1)(a)
+        GDPR or Art. 9(2)(a) GDPR if special categories of data according to Art. 9(1) GDPR are processed. In case of an
+        explicit consent to the transfer of personal data to third countries, the processing is also based on Art.
+        49(1)(a) GDPR. If you have consented to the storage of cookies or access to information on your end device
+        (e.g., via device fingerprinting), the processing takes place additionally on the basis of § 25(1) TTDSG. The
+        consent can be revoked at any time. If your data is necessary for the fulfillment of a contract or for the
+        implementation of pre-contractual measures, we process your data on the basis of Art. 6(1)(b) GDPR. Furthermore,
+        we process your data if required to fulfill a legal obligation based on Art. 6(1)(c) GDPR. Data processing can
+        also take place on the basis of our legitimate interest according to Art. 6(1)(f) GDPR. The relevant legal bases
+        for the respective data processing are explained in the following sections of this privacy policy.</p>
+    <h3>Recipient of Personal Data</h3>
+    <p>As part of our business activities, we collaborate with various external entities. In some cases, the
+        transmission of personal data to these external entities is necessary. We only disclose personal data to
+        external entities if this is necessary for the fulfillment of a contract, if we are legally obligated to do so
+        (e.g., disclosure of data to tax authorities), if we have a legitimate interest in the disclosure according to
+        Art. 6(1)(f) GDPR, or if another legal basis allows the data transfer. When using data processors, we only
+        disclose personal data of our customers based on a valid contract for data processing. In the case of joint
+        processing, a joint processing agreement is concluded.</p>
+    <h3>Revocation of Your Consent to Data Processing</h3>
+    <p>Many data processing operations are only possible with your express consent. You can revoke your consent at any
+        time with future effect. An informal e-mail making this request is sufficient. The legality of the data
+        processing carried out until the revocation remains unaffected by the revocation.</p>
+    <h3>Right to Object to the Collection of Data in Special Cases and to Direct Advertising (Art. 21 GDPR)</h3>
+    <p>IF THE DATA PROCESSING ON THE BASIS OF ART. 6(1)(E) OR (F) GDPR, YOU HAVE THE RIGHT TO OBJECT TO THE PROCESSING
+        OF YOUR PERSONAL DATA AT ANY TIME FOR REASONS ARISING FROM YOUR PARTICULAR SITUATION, INCLUDING PROFILING BASED
+        ON THESE PROVISIONS. THE RESPECTIVE LEGAL BASIS ON WHICH PROCESSING IS BASED CAN BE FOUND IN THIS PRIVACY
+        POLICY. IF YOU OBJECT, WE WILL NO LONGER PROCESS YOUR PERSONAL DATA UNLESS WE CAN DEMONSTRATE COMPELLING
+        LEGITIMATE GROUNDS FOR PROCESSING THAT OVERRIDE YOUR INTERESTS, RIGHTS, AND FREEDOMS, OR THE PROCESSING IS FOR
+        THE ESTABLISHMENT, EXERCISE, OR DEFENSE OF LEGAL CLAIMS (OBJECTION ACCORDING TO ART. 21(1) GDPR).</p>
+    <p>IF YOUR PERSONAL DATA IS PROCESSED FOR DIRECT MARKETING PURPOSES, YOU HAVE THE RIGHT TO OBJECT AT ANY TIME TO THE
+        PROCESSING OF YOUR PERSONAL DATA FOR THE PURPOSE OF SUCH ADVERTISING; THIS ALSO APPLIES TO PROFILING INSOFAR AS
+        IT IS RELATED TO SUCH DIRECT ADVERTISING. IF YOU OBJECT, YOUR PERSONAL DATA WILL SUBSEQUENTLY NO LONGER BE USED
+        FOR DIRECT MARKETING PURPOSES (OBJECTION ACCORDING TO ART. 21(2) GDPR).</p>
+    <h3>Right to File Complaints with Regulatory Authorities</h3>
+    <p>If there has been a breach of data protection legislation, the person affected may file a complaint with the
+        competent regulatory authorities. The competent regulatory authority for matters related to data protection
+        legislation is the data protection officer of the German state in which our company is headquartered. A list of
+        data protection officers and their contact details can be found at the following link: <a
+            href="https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html" target="_blank"
+            rel="noopener noreferrer">https://www.bfdi.bund.de/DE/Infothek/Anschriften_Links/anschriften_links-node.html</a>.
+    </p>
+    <h3>Right to Data Portability</h3>
+    <p>You have the right to have data which we process based on your consent or in fulfillment of a contract
+        automatically delivered to yourself or to a third party in a standard, machine-readable format. If you require
+        the direct transfer of data to another responsible party, this will only be done to the extent technically
+        feasible.</p>
+    <h3>SSL or TLS Encryption</h3>
+    <p>This site uses SSL or TLS encryption for security reasons and for the protection of the transmission of
+        confidential content, such as the inquiries you send to us as the site operator. You can recognize an encrypted
+        connection in your browser's address line when it changes from "http://" to "https://" and the lock icon is
+        displayed in your browser's address bar. If SSL or TLS encryption is activated, the data you transfer to us
+        cannot be read by third parties.</p>
+    <h3>Encrypted Payments on this Website</h3>
+    <p>If you enter into a contract which requires you to send us your payment information (e.g., account number for
+        direct debits), we will require this data to process your payment.</p>
+    <p>Payment transactions using common means of payment (Visa/MasterCard, direct debit) are only made via encrypted
+        SSL or TLS connections. You can recognize an encrypted connection in your browser's address line when it changes
+        from "http://" to "https://" and the lock icon in your browser line is visible. In the case of encrypted
+        communication, any payment details you submit to us cannot be read by third parties.</p>
+    <h3>Information, Deletion, and Correction</h3>
+    <p>Within the scope of applicable legal provisions, you have the right to free information about your stored
+        personal data, its origin and recipient, and the purpose of data processing, and, if necessary, a right to
+        correct or delete this data. For this purpose, as well as for further questions about personal data, you can
+        contact us at any time at the address provided in the imprint.</p>
+    <h3>Right to Restrict Processing</h3>
+    <p>You have the right to request the restriction of the processing of your personal data. You can contact us at any
+        time at the address provided in the imprint. The right to restrict processing exists in the following cases:</p>
+    <ul>
+        <li>If you dispute the accuracy of your personal data stored with us, we usually need time to verify this. For
+            the duration of the audit, you have the right to request the restriction of the processing of your personal
+            data.</li>
+        <li>If the processing of your personal data happened/is happening unlawfully, you can request the restriction of
+            data processing instead of deletion.</li>
+        <li>If we no longer need your personal data, but you need it for the exercise, defense, or establishment of
+            legal claims, you have the right to request the restriction of the processing of your personal data instead
+            of deletion.</li>
+        <li>If you have filed an objection according to Art. 21(1) GDPR, a balance must be struck between your interests
+            and ours. As long as it is not yet clear whose interests prevail, you have the right to request the
+            restriction of the processing of your personal data.</li>
+    </ul>
+    <p>If you have restricted the processing of your personal data, this data – apart from being stored – may only be
+        processed with your consent or for the purpose of asserting, exercising, or defending legal claims or protecting
+        the rights of another natural or legal person or for reasons of important public interest of the European Union
+        or a member state.</p>
+    <h2>4. Data Collection on this Website</h2>
+    <h3>Cookies</h3>
+    <p>Our websites use so-called "cookies." Cookies are small data packets that do not cause any damage to your device.
+        They are either temporarily stored for the duration of a session (session cookies) or permanently (persistent
+        cookies) on your device. Session cookies are automatically deleted after the end of your visit. Persistent
+        cookies remain stored on your device until you delete them yourself or automatic deletion occurs through your
+        web browser.</p>
+    <p>Cookies can originate from us (first-party cookies) or from third-party companies (so-called third-party
+        cookies). Third-party cookies enable the integration of certain services from third-party companies within
+        websites (e.g., cookies for processing payment services).</p>
+    <p>Cookies have various functions. Numerous cookies are technically necessary because certain website functions
+        would not work without them (e.g., the shopping cart function or the display of videos). Other cookies may be
+        used to analyze user behavior or for advertising purposes.</p>
+    <p>Cookies that are necessary for the performance of the electronic communication process, for providing certain
+        functions you desire (e.g., for the shopping cart function), or for optimizing the website (e.g., cookies for
+        measuring web audiences) and are necessary cookies, are stored based on Art. 6(1)(f) GDPR, unless another legal
+        basis is specified. The website operator has a legitimate interest in storing necessary cookies for the
+        technically flawless and optimized provision of its services. If consent to the storage of cookies and similar
+        recognition technologies has been requested, processing will only take place based on this consent (Art. 6(1)(a)
+        GDPR and § 25(1) TTDSG); consent can be revoked at any time.</p>
+    <p>You can configure your browser to inform you about the setting of cookies, allow cookies only in individual
+        cases, exclude the acceptance of cookies for specific cases or in general, and activate the automatic deletion
+        of cookies when closing the browser. Disabling cookies may limit the functionality of this website.</p>
+    <p>You can find information about which cookies and services are used on this website in this privacy policy.</p>
+
+    <h2>5. Plugins and Tools</h2>
+    <h3>Google Fonts (Local Hosting)</h3>
+    <p>This site uses so-called Google Fonts for the uniform display of fonts, provided by Google. The Google Fonts are
+        installed locally. There is no connection to Google servers.</p>
+    <p>For more information about Google Fonts, please visit <a href="https://developers.google.com/fonts/faq"
+            target="_blank" rel="noopener noreferrer">https://developers.google.com/fonts/faq</a> and Google's privacy
+        policy: <a href="https://policies.google.com/privacy?hl=en" target="_blank"
+            rel="noopener noreferrer">https://policies.google.com/privacy?hl=en</a>.</p>
+    <p>Source: <a href="https://www.e-recht24.de">https://www.e-recht24.de</a></p>
+
+    <h2>6. Use of freely available Images and Videos</h2>
+    <h3>By Pixabay</h3>
+    <p>We use images and videos on this website provided by the Pixabay platform. Pixabay offers a variety of
+        high-quality media content published under a Creative Commons license. This media can be freely used, even for
+        commercial purposes, without license fees or attribution. The use of Pixabay media is subject to the terms of
+        use of Pixabay: <a href="https://pixabay.com/service/terms/" target="_blank"
+            rel="noopener noreferrer">https://pixabay.com/service/terms/</a>.</p>
+    <p>The integration of Pixabay media is based on our legitimate interest in the visual design of our website and the
+        improvement of user experience in accordance with Art. 6(1)(f) GDPR. We ensure that the integrated media is used
+        in accordance with Pixabay's terms of use.</p>
+    <p>Please note that, although Pixabay images and videos are freely available, the copyrights remain with the
+        respective photographers or artists. If you have reason to believe that your copyrights have been violated,
+        please contact us immediately so that we can take appropriate measures.</p>
+
+
 </div>
 <app-footer></app-footer>
