--- a/src/app/account/login/login.component.scss
+++ b/src/app/account/login/login.component.scss
@@ -48,3 +48,10 @@ h1 {
 app-footer {
   margin-top: auto;
 }
+
+.email-login {
+  margin-bottom: 20px;
+  height: auto;
+  padding: 10px;
+  text-align: center;
+}
