--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -76,6 +76,9 @@
                     <p translate>Next</p>
                 </button>
             </form>
+            <button style="margin-left: 16px;margin-right: 16px;" (click)="goBack()" mat-fab extended color="">
+                <p translate>back</p>
+            </button>
         </mat-card>
     </div>
     <app-footer></app-footer>
