--- a/src/app/storage/upload/status.dialog.html
+++ b/src/app/storage/upload/status.dialog.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title align="center">Status</h2>
+<h2 mat-dialog-title align="center" translate>Status</h2>
 
 
 <div mat-dialog-content>
