--- a/src/app/storage/upload/status.dialog.html
+++ b/src/app/storage/upload/status.dialog.html
@@ -2,8 +2,7 @@
 
 
 <div mat-dialog-content>
-    <p translate>Please wait until the upload is finished</p>
-    <p>or fill in the required fields.</p>
+    <p align="center" translate>Please wait until the upload is finished or fill in the required fields.</p>
 </div>
 
 <div mat-dialog-actions align="end">
