--- a/src/app/storage/upload/upload.component.scss
+++ b/src/app/storage/upload/upload.component.scss
@@ -87,6 +87,11 @@ textarea {
   margin-top: 10px;
   margin-bottom: 0;
 }
+
+.upload-h3 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 mat-card {
   margin-bottom: 22px;
 }
