--- a/src/app/templates/header/dialog/profil-account.html
+++ b/src/app/templates/header/dialog/profil-account.html
@@ -21,8 +21,8 @@
                 <h3 class="profil-h3" translate>Optionen</h3>
                 <mat-card-content>
                     <section class="profil-slider">
-                        <mat-slide-toggle class="example-margin" [color]="color" [(ngModel)]="isChecked"
-                            name="play_check">
+                        <mat-slide-toggle style="padding-left: 10px;" class="example-margin" [color]="color"
+                            [(ngModel)]="isChecked" name="play_check">
                             <p translate>Autoplay</p>
                         </mat-slide-toggle>
                     </section>
