--- a/src/app/module/my-uploads/dialog-delete.html
+++ b/src/app/module/my-uploads/dialog-delete.html
@@ -1,12 +1,14 @@
-<h2 mat-dialog-title translate>Delete file</h2>
-<div mat-dialog-content translate>
-    Would you like to delete <i style="color: white;">{{movie_name}} </i> ?
-</div>
-<div mat-dialog-actions align="center">
-    <button mat-button mat-dialog-close>
-        <p translate>Cancel</p>
-    </button>
-    <button mat-button mat-dialog-close cdkFocusInitial (click)="deleteMovie()">
-        <p translate>Delete</p>
-    </button>
+<div style="padding: 15px;">
+    <h2 mat-dialog-title translate>Delete file</h2>
+    <div mat-dialog-content><span translate>
+            Would you like to </span><i style="color: white;">{{movie_name}} </i> <span translate>delete ?</span>
+    </div>
+    <div mat-dialog-actions align="center">
+        <button mat-button mat-dialog-close>
+            <p translate>Cancel</p>
+        </button>
+        <button mat-raised-button mat-dialog-close cdkFocusInitial color="warn" (click)="deleteMovie()">
+            <p translate>Delete</p>
+        </button>
+    </div>
 </div>
