--- a/src/app/storage/upload/upload.component.html
+++ b/src/app/storage/upload/upload.component.html
@@ -22,11 +22,11 @@
             </mat-form-field>
             <mat-form-field>
                 <mat-label> <span translate>Creation date</span></mat-label>
-                <input matInput [matDatepicker]="picker" [formControl]="uploadForm.controls.date_from" name="date_from"
+                <input matInput [matDatepicker]="dp" [formControl]="uploadForm.controls.date_from" name="date_from"
                     required>
                 <mat-hint>MM/DD/YYYY</mat-hint>
-                <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
+                <mat-datepicker-toggle matIconSuffix [for]="dp"></mat-datepicker-toggle>
+                <mat-datepicker #dp></mat-datepicker>
             </mat-form-field>
         </div>
 
@@ -93,6 +93,22 @@
                     </mat-chip-option>
                 </mat-chip-listbox>
             </mat-card-content>
+            <mat-card-content>
+                <h3 class="upload-h3" translate>Automatic image generation</h3>
+                <section class="example-section">
+                    <mat-checkbox checked="checked" class="example-margin"
+                        [formControl]="uploadForm.controls.auto_generate_cover">
+                        <span translate>Automatic cover generation</span>
+                    </mat-checkbox>
+                </section>
+
+                <section class="example-section">
+                    <mat-checkbox checked="checked" class="example-margin"
+                        [formControl]="uploadForm.controls.auto_generate_image">
+                        <span translate>Automatic background generation</span>
+                    </mat-checkbox>
+                </section>
+            </mat-card-content>
         </mat-card>
         <mat-card class="result">
             <mat-card-content class="upload-button">
@@ -100,7 +116,7 @@
                     <h3 class="upload-h3" translate>Video / Files</h3>
                     <i *ngIf="!uploadForm.valid" translate>(Please fill in all fields above first)</i>
                 </div>
-                <div>
+                <div *ngIf="!uploadForm.controls.auto_generate_cover.value">
                     <div class="button_right">
                         <input style="display: none;" type="file" class="file-input" accept="image/png, image/jpeg"
                             (change)="onFileSelectedThumbnail($event)" #fileUploadThumbnail>
@@ -123,12 +139,9 @@
                         <mat-progress-bar class="progress-bar" mode="determinate" [value]="uploadProgressThumbnail"
                             *ngIf="uploadProgressThumbnail">
                         </mat-progress-bar>
-
                     </div>
-
                 </div>
-
-                <div>
+                <div *ngIf="!uploadForm.controls.auto_generate_image.value">
                     <div class="button_right">
                         <input style="display: none;" type="file" class="file-input" accept="image/png, image/jpeg"
                             (change)="onFileSelectedImage($event)" #fileUploadImage>
@@ -153,7 +166,6 @@
                         </mat-progress-bar>
                     </div>
                 </div>
-
                 <div>
                     <div class="button_right">
                         <input style="display: none;" type="file" class="file-input" accept="video/*"
@@ -193,5 +205,4 @@
         </div>
     </form>
 </div>
-
 <app-footer></app-footer>
