add email form convert

--- a/src/app/module/my-uploads/my-uploads.component.scss
+++ b/src/app/module/my-uploads/my-uploads.component.scss
@@ -1,7 +1,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Mindesthöhe des Containers auf 100% der Bildschirmhöhe setzen */
+  min-height: 100vh;
 }
 
 .content {
@@ -42,7 +42,7 @@ td {
   }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 750px) {
   .dn-small {
     display: none;
   }
