--- a/src/app/module/my-uploads/my-uploads.component.html
+++ b/src/app/module/my-uploads/my-uploads.component.html
@@ -31,12 +31,11 @@
 
             <ng-container matColumnDef="cover">
                 <th mat-header-cell *matHeaderCellDef translate class="dn-small"> Cover </th>
-                <td class="dn-small" mat-cell *matCellDef="let element"><a *ngIf="element.convert_status == 2"
+                <td mat-cell *matCellDef="let element"><a *ngIf="element.convert_status == 2"
                         href="/single-view?select={{element.random_key}}"> <img [src]="element.cover" /></a>
-                    <a *ngIf="element.convert_status == 1" href="/my-uploads"> <img [src]="element.cover" /></a>
-
+                    <a *ngIf="element.convert_status == 1"> <img style="cursor: pointer;" (click)="openDialogConvert()"
+                            [src]="element.cover" /></a>
                 </td>
-
             </ng-container>
 
             <ng-container matColumnDef="change">
