--- a/src/app/module/category/category-new-movies/category-new-movies.component.html
+++ b/src/app/module/category/category-new-movies/category-new-movies.component.html
@@ -1,6 +1,6 @@
 <div class="content">
 
-    <p translate>New movie</p>
+    <p style="margin-left: 15px !important;" translate>New movie</p>
 
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
