--- a/src/app/module/category/category-funny/category-funny.component.html
+++ b/src/app/module/category/category-funny/category-funny.component.html
@@ -1,6 +1,6 @@
 <div class="content">
     <a href="/funny" class="category-link">
-        <p translate>Funny</p>
+        <h2 translate>Funny</h2>
     </a>
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
