--- a/src/app/module/category/category-knowledge/category-knowledge.component.html
+++ b/src/app/module/category/category-knowledge/category-knowledge.component.html
@@ -1,6 +1,6 @@
 <div class="content">
     <a href="/knowledge" class="category-link">
-        <p translate>Knowledge</p>
+        <h2 translate>Knowledge</h2>
     </a>
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
