--- a/src/app/module/category/category-movies/category-movies.component.html
+++ b/src/app/module/category/category-movies/category-movies.component.html
@@ -1,6 +1,6 @@
 <div class="content">
     <a href="/movies" class="category-link">
-        <p translate>Movie</p>
+        <h2 translate>Movie</h2>
     </a>
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
