--- a/src/app/module/category/category-nature/category-nature.component.html
+++ b/src/app/module/category/category-nature/category-nature.component.html
@@ -1,6 +1,6 @@
 <div class="content">
     <a href="/nature" class="category-link">
-        <p translate>Nature</p>
+        <h2 translate>Nature</h2>
     </a>
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
