--- a/src/app/module/category/category-series/category-series.component.html
+++ b/src/app/module/category/category-series/category-series.component.html
@@ -1,6 +1,6 @@
 <div class="content">
     <a href="/series" class="category-link">
-        <p translate>Series</p>
+        <h2 translate>Series</h2>
     </a>
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
