--- a/src/app/module/category/category-your-movies/category-your-movies.component.html
+++ b/src/app/module/category/category-your-movies/category-your-movies.component.html
@@ -1,6 +1,6 @@
 <div class="content">
     <a href="/my" class="category-link">
-        <p translate>My Movies</p>
+        <h2 translate>My Movies</h2>
     </a>
     <div class="content-boxing ">
         <div class="content-draggable" id="content-box">
