--- a/src/styles.scss
+++ b/src/styles.scss
@@ -148,12 +148,17 @@ h3 {
 
 h1 {
   font-size: calc(32px + 2vw) !important;
+  line-height: 105% !important;
+  @media (min-width: 1200px) {
+    font-size: 48px !important;
+  }
 }
+
 h2 {
   font-size: calc(18px + 1.75vw) !important;
   line-height: 120% !important;
   @media (min-width: 1200px) {
-    font-size: 42px !important;
+    font-size: 38px !important;
   }
 }
 h3 {
