--- a/src/app/module/category/content-box.scss
+++ b/src/app/module/category/content-box.scss
@@ -51,7 +51,7 @@
   border-radius: 10px;
   aspect-ratio: 16 / 9;
   box-shadow: 0px 6px 10px 5px #000000;
-
+  font-size: 24px !important;
   a {
     text-decoration: none;
     color: white;
@@ -70,6 +70,7 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    font-size: 24px !important;
   }
 
   img {
